# score-addon-gfx

./: CMakeLists.txt  score_addon_gfx.cpp  score_addon_gfx.hpp
Gfx/: GfxApplicationPlugin.cpp  GfxApplicationPlugin.hpp  GfxContext.hpp  GfxDevice.cpp  GfxDevice.hpp  GfxExec.hpp  GfxExecContext.hpp  TexturePort.cpp  TexturePort.hpp
Gfx/Filter/: Executor.cpp  Executor.hpp  Inspector.cpp  Inspector.hpp  Layer.hpp  LocalTree.cpp  LocalTree.hpp  Metadata.hpp  Presenter.cpp  Presenter.hpp  Process.cpp  Process.hpp  View.cpp
Gfx/Graph/: CMakeLists.txt  filternode.hpp  graph.cpp  graph.hpp  isfnode.cpp  isfnode.hpp  main.cpp  mesh.hpp  node.cpp  node.hpp  nodes.hpp  phongnode.cpp  renderer.cpp  renderer.hpp  renderstate.hpp  scene.hpp  uniforms.hpp  videodecoder.hpp  videonode.hpp  window.hpp
Gfx/Images/: Executor.cpp  Executor.hpp  Inspector.cpp  Inspector.hpp  Layer.hpp  LocalTree.hpp  Metadata.hpp  Process.cpp  Process.hpp
Gfx/Mesh/: Presenter.cpp  Presenter.hpp  Process.cpp
Gfx/Video/: Executor.cpp  Executor.hpp  Inspector.cpp  Inspector.hpp  LocalTree.cpp  LocalTree.hpp  Metadata.hpp  Presenter.cpp  Presenter.hpp  Process.cpp  Process.hpp  View.cpp
